--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
-.fw-3{
-  font-weight: 400;
+.fw-5{
+  font-weight: 500;
 }
 
 body{
@@ -18,6 +18,14 @@ ul li {
 .heading{
   padding-bottom: 30px;
   border-bottom: 1px solid #d6d4d4;
+}
+.heading-i{
+  float: right;
+  line-height: 50px;
+  margin-right:20px;
+  font-size: 20px;
+  cursor: pointer;
+  color: white;
 }
 .app-body{
   margin-top:30px;
