--- a/src/App.css
+++ b/src/App.css
@@ -12,8 +12,11 @@ ul {
 ul li {
   list-style: none;
 }
+thead tr th{
+  font-size: 20px;
+}
 .container{
-  margin-top:20px;
+  margin-top:18px;
 }
 .heading{
   padding-bottom: 30px;
@@ -37,7 +40,7 @@ ul li {
   padding-bottom: 10px;
 }
 .tarkform-heading{
-  background-color: #17a2b8;
+  background-color: #007bff;
   color: white;
   height: 50px;
   line-height: 50px;
@@ -74,5 +77,8 @@ button{
 }
 button:focus{
   outline: none;
+}
+.tark-status{
+  cursor: default;
 }
 
